--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
+    "inquirer": "^8.2.6",
     "oclif": "^4.14.35",
     "tiny-secp256k1": "^2.2.3"
   },
